--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-flipper": "^0.173.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "redux-flipper": "^2.0.2",
     "rn-async-storage-flipper": "^0.0.10"
   },
