--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^0.27.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-flipper": "^0.173.0",
