--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "^3.18.2",
     "react-redux": "^8.0.5",
     "redux-flipper": "^2.0.2",
-    "rn-async-storage-flipper": "^0.0.10"
+    "rn-async-storage-flipper": "^0.0.10",
+    "socket.io-client": "^4.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
