--- a/android/build.gradle
+++ b/android/build.gradle
@@ -49,6 +49,11 @@ allprojects {
             }
         }
         google()
-        maven { url 'https://www.jitpack.io' }
+        // maven { url 'https://www.jitpack.io' }
+        jcenter()
+        // 네이버 지도 저장소
+        maven {
+            url 'https://naver.jfrog.io/artifactory/maven/'
+        }
     }
 }
