--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,7 +25,7 @@ buildscript {
         classpath("com.android.tools.build:gradle:7.0.4")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:4.1.2")
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -49,8 +49,8 @@ allprojects {
             }
         }
         google()
-        // maven { url 'https://www.jitpack.io' }
-        jcenter()
+        maven { url 'https://www.jitpack.io' }
+        // jcenter()
         // 네이버 지도 저장소
         maven {
             url 'https://naver.jfrog.io/artifactory/maven/'
